--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "dingo/api": "^2.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "dingo/api": "^2.2"
+        "overtrue/easy-sms": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
