--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "liyu/dingo-serializer-switch": "^0.3.1",
         "overtrue/easy-sms": "^1.1"
     },
     "require-dev": {
