--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "dingo/api": "^2.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.1",
         "laravel/tinker": "^1.0",
         "liyu/dingo-serializer-switch": "^0.3.1",
         "overtrue/easy-sms": "^1.1"
